--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^8.0.0",
         "gulp-newer": "^1.4.0",
+        "gulp-notify": "^4.0.0",
         "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^9.0.1",
         "gulp-rename": "^2.0.0",
+        "gulp-replace": "^1.1.3",
         "gulp-sass": "^5.1.0",
         "gulp-webp": "^4.0.1",
         "prettier": "^2.7.1",
@@ -32,7 +34,6 @@
         "webpack-stream": "^7.0.0"
     },
     "dependencies": {
-        "del": "^7.0.0",
-        "gulp-notify": "^4.0.0"
+        "del": "^7.0.0"
     }
 }
